<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">android.chess.visao</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Android Chess</string>
    <string name="title_activity_inicial">Bem vindo</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_partida">Partida</string>
    <string name="textLogin">Login</string>
    <string name="textPasswd">Senha</string>
    <string name="textCadastrar">Cadatrar-se</string>
    <string name="textSair">Sair</string>
    <string name="textUsuario">Usuario</string>
    <string name="textWelcome">    Bem vindo ao android.chess 0.1</string>
    <string name="textSenha">Senha</string>
    <string name="textEmail">E-mail</string>
    <string name="textNome">Nome</string>
    <string name="btnLoginOnClick">btnLoginOnClick</string>
    <string name="btnRegisterOnClick">btnRegisterOnClick</string>
    <string name="btnCadastrarOnClick">btnCadastrarOnClick</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_convidar">Convidar</string>
    <string name="textConvidar">Convidar jogador</string>
    <string name="textWelcomeMain">Bem vindo %s!</string>
    <string name="btnSairOnClick">btnSairOnClick</string>
    <string name="btnConvidarOnClick">btnConvidarOnClick</string>
    <string name="lstJogadoresOnClick">lstJogadoresOnClick</string>
    <string name="atencao">ATENÇÃO</string>
    <string name="erro">ERRO</string>
    <string name="promoteTitle">Escolha o tipo de promoção</string>
    <string name="textBispo">Bispo</string>
    <string name="textCavalo">Cavalo</string>
    <string name="textTorre">Torre</string>
    <string name="textRainha">Rainha</string>

</resources>