<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp" >

        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textWelcome"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <LinearLayout style="@style/lblSimple" >

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/textLogin" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <EditText
                    android:id="@+id/edtLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                style="@style/lblSimple"
                android:layout_height="fill_parent"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:id="@+id/txtPasswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/textPasswd" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <EditText
                    android:id="@+id/edtPasswd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSair"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@string/btnSairOnClick"
                android:text="@string/textSair" />

            <Button
                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@string/btnRegisterOnClick"
                android:text="@string/textCadastrar" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@string/btnLoginOnClick"
                android:text="@string/textLogin" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>